# pytest_sample

./: README.md  pyproject.toml
tests/: test_example.py  test_example2.py  test_todo.py
