[tool.poetry]
name = "pytestproject"
version = "0.1.0"
description = ""
authors = ["Wilson Bucaoto <wpbucaoto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyleniumio = "^1.21.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
